# GNUMakeTest

./: AUTHORS  Makefile  Makefile.am  Makefile.in  README.md  config.h  config.status  configure  configure.in
autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3
src/exception/core/: Makefile  Makefile.am  Makefile.in  exception  exception.cpp
src/exception/core/.deps/: exception.Po
src/exception/include/: exception.h
src/include/: swap.h
src/lib/: Makefile  Makefile.am  Makefile.in  swap.c  swap.cpp
src/lib/.deps/: swap.Po
