#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.69)
AC_INIT(GNUMT,1.0, xixy10@foxmail.com)
AC_CONFIG_SRCDIR(src/exception/core/exception.cpp)
AC_CONFIG_HEADERS(config.h)
AM_INIT_AUTOMAKE(GNUMT,1.0)
# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.
AC_PROG_RANLIB
# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 src/exception/core/Makefile
                 src/lib/Makefile])
AC_OUTPUT
